Obtain players from Stat API